--- a/02-scripts.backup/smokers_calc_horseshoe.Rmd
+++ b/02-scripts.backup/smokers_calc_horseshoe.Rmd
@@ -20,30 +20,45 @@ Set the working directory of the notebook to the parent directory of the
 notebook itself.  
 
 ```{r setup}
-# knitr::opts_knit$set(root.dir = normalizePath(".."))
+knitr::opts_knit$set(root.dir = normalizePath(".."))
 ```
 
 ```{r load_data}
-# malt_table <- fread("./05-results.backup/malt_otu_cuperdec_and_library_for_beta_cleaned.tsv")
-malt_otu <- fread("~/Desktop/malt_otu_cuperdec_and_library_for_beta_cleaned.tsv")
+# malt_otu <- fread("~/Desktop/malt_otu_cuperdec_and_library_for_beta_cleaned.tsv")
+
+# load the taxonomy tables that have been decontaminated and the column headers are cleaned up
+load("./05-results.backup/Taxonomy_tables.RData")
 
 
 ```
 
 Read in the metadata tables
 ```{r metadata}
-metadata <- fread("~/Desktop/Metadata_cuperdec_for_beta_cleaned.tsv")
-
-Country_colors = c(Netherlands = "Blue", Spain = "Yellow")
+# load the metadata file
+load("./05-results.backup/Metadata_tables.RData")
 
 ```
 
+List the outliers from the plot in `MID_CMB_Rad_Kil_Iber_decontam.Rmd`. 
+```{r outliers}
+outliers <- c("EXB059.A2501","LIB058.A0103","LIB058.A0106","CSS","CSD")
+poor_samples <- fread("./05-results.backup/cuperdec_poor_samples.tsv") %>%
+  pull(Sample)
+
+outliersF <- str_c(outliers, collapse = "|")
+
+```
+
+## Unfiltered data
 ```{r}
-malt_otu_pca_table <- malt_otu %>%
-  gather("SampleID","Counts",2:ncol(.)) %>%
+malt_otu_pca_table <- all_species_decontam %>%
+  select(matches("Species|MID")) %>%
+  select(-one_of(outliers)) %>%
+  select(-one_of(poor_samples)) %>%
+  gather("Library_ID","Counts",2:ncol(.)) %>%
   mutate(Counts = Counts + 1) %>%
   spread(Species, Counts) %>%
-  column_to_rownames("SampleID")
+  column_to_rownames("Library_ID")
 
 # look at the screenplot to decide how many components to keep for the PCA -> will keep all but 2
 mixOmics::tune.pca(malt_otu_pca_table, logratio = 'CLR')
@@ -51,20 +66,20 @@ mixOmics::tune.pca(malt_otu_pca_table, logratio = 'CLR')
 malt_otu.pca <- mixOmics::pca(malt_otu_pca_table, ncomp = 2, logratio = 'CLR')
 malt_pca_values <- malt_otu.pca$variates$X %>%
   as.data.frame() %>%
-  rownames_to_column("SampleID") %>%
-  full_join(., metadata, by = "SampleID")
+  rownames_to_column("Library_ID") %>%
+  inner_join(., full_metadata, by = "Library_ID")
 
 ```
 There is a point, point where bars jump from tall to much shorter, this number is used to determine numbers of components for pca (2 bars high, dropdown = leave at 2, only one bar = leave at 2), these contain most contaminations. Will leave 2 as number.
 
 Plot the PCA
 ```{r}
-# plot the PCA with SampleIDs
-ggplot(malt_pca_values, aes(PC1, PC2, color = Env, shape = Env)) +
-  geom_text(aes(label = SampleID)) +
+# plot the PCA with Library_IDs
+ggplot(malt_pca_values, aes(PC1, PC2, color = Region, shape = Region)) +
+  geom_text(aes(label = Library_ID), size = 3) +
   theme_minimal()
 
-horseshoe <- ggplot(malt_pca_values, aes(PC1, PC2, color = Env, shape = Env)) +
+horseshoe <- ggplot(malt_pca_values, aes(PC1, PC2, color = Region, shape = Region)) +
   geom_point(size = 2) +
   theme_minimal()
 
@@ -75,166 +90,59 @@ horseshoe
 
 ```
 
-```{r}
 
-# calculate the total # of reads in the datatable for % calculations in the next chunks
-total_reads <- malt_otu %>%
-  gather("SampleID","Counts",2:ncol(.)) %>%
-  summarise(Total = sum(Counts)) %>%
-  pull()
-
-
-malt_otu_pca_table_filt <- malt_otu %>%
-  adorn_totals(where = "col", name = "Total") %>%
-  mutate(Pct = Total/total_reads*100) %>%
-  filter(Pct >= 0.01) %>%
-  select(-c("Total","Pct")) %>%
-  gather("SampleID","Counts",2:ncol(.)) %>%
-  mutate(Counts = Counts +1) %>%
-  spread(Species,Counts) %>%
-  column_to_rownames("SampleID")
-
-# look at the screenplot to decide how many components to keep for the PCA -> will keep all but 2
-mixOmics::tune.pca(malt_otu_pca_table_filt, logratio = 'CLR')
-# perform a PCA to see how the data cluster
-malt_otu_filt.pca <- mixOmics::pca(malt_otu_pca_table_filt, ncomp = 2, logratio = 'CLR')
-malt_pca_filt_values <- malt_otu_filt.pca$variates$X %>%
-  as.data.frame() %>%
-  rownames_to_column("SampleID") %>%
-  full_join(., metadata, by = "SampleID")
-
-```
-
-```{r}
-# plot the PCA with SampleIDs
-ggplot(malt_pca_filt_values, aes(PC1, PC2, color = Env, shape = Env)) +
-  geom_text(aes(label = SampleID)) +
-  theme_minimal()
-
-ggplot(malt_pca_filt_values, aes(PC1, PC2, color = Env, shape = Env)) +
-  geom_point() +
-  theme_minimal()
-
-```
 
 ```{r}
 
 # plot with the species ordered by loading in PC1
+# Plot the heatmap with samples ordered by the loading in PC1 from above
+# make the Library_IDs a factor so they're in the correct order for the heatmap using the vector from the step above
 
 
-```
+sample_order <- malt_pca_values %>%
+  arrange(PC1) %>%
+  pull(Library_ID)
 
+species_order <- malt_otu.pca$loadings$X %>%
+  as.data.frame() %>%
+  rownames_to_column("Species") %>%
+  arrange(desc(PC1)) %>%
+  filter(!between(PC1, -0.01, 0.01)) %>%
+  pull(Species)
 
-
-```{r}
-# plot with the species ordered by clustering
+# re-define Region_colors so we don't have the additional regions as factors to deal with later
+Region_colors = c("#311068","#E95562")
 
 # CLR-transform the matrix for plotting the heatmap
 malt_otu_pca_table_clr <- clr(malt_otu_pca_table) # malt_otu_pca_table_filt
 malt_otu_pca_table_clr <- as.matrix(malt_otu_pca_table_clr)
 
-# orient the matrix with correct rows/columns to run the distance calculation for the species, not the samples (columns are SampleID, rows are Species)
-malt_otu_pca_table_clr_sp <- malt_otu_pca_table_clr %>%
-  as.data.frame() %>%
-  rownames_to_column("SampleID") %>%
-  gather("Species","Counts",2:ncol(.)) %>%
-  spread(SampleID,Counts)
-
-#add the rownames back
-rownames(malt_otu_pca_table_clr_sp) <- malt_otu_pca_table_clr_sp$Species
-malt_otu_pca_table_clr_sp <- malt_otu_pca_table_clr_sp %>% select(-Species)
-
-# perform a distance calculation for hierarchical clustering for the species ordering
-malt_otu_pca_table_clr_sp_dist <- vegdist(malt_otu_pca_table_clr_sp, method = "euclidian")
-# cluster the data with hclust
-malt_otu_pca_table_clr_sp_dist_hr <- hclust(malt_otu_pca_table_clr_sp_dist)
-# malt_otu_pca_table_clr_sp_dist_hr$order gives the dendrogram order from the bottom to the top, but using the row numbers not the row names
-# pull this order out and store as a vector to make the order a factor in the next step for plotting
-sp_all_order <- malt_otu_pca_table_clr_sp_dist_hr$order %>%
-  as.character.numeric_version(.) %>%
-  str_trim(.)
-
-# use the dendrogram order to pull out the species in the correct order for the heatmap
-malt_otu_pca_table_clr_order <- malt_otu_pca_table_clr %>%
-  as.data.frame() %>%
-  rownames_to_column("SampleID") %>%
-  gather("Species","CLR",2:ncol(.)) %>%
-  spread(SampleID,CLR) %>%
-  mutate(SpOrder = as.character(seq(1,463))) %>% # 463 241
-  select(Species, SpOrder, everything()) %>%
-  mutate(SpOrder = fct_relevel(SpOrder, sp_all_order)) %>%
-  arrange(SpOrder) %>%
-  pull(Species)
-
-# make the species a factor so they're in the correct order for the heatmap using the vector from the step above
 malt_otu_pca_table_clr_long <- malt_otu_pca_table_clr %>%
   as.data.frame() %>%
-  rownames_to_column("SampleID") %>%
+  rownames_to_column("Library_ID") %>%
   gather("Species","CLR",2:ncol(.)) %>%
-  spread(SampleID,CLR) %>%
-  mutate(Species = fct_relevel(Species, malt_otu_pca_table_clr_order)) %>%
+  spread(Library_ID,CLR) %>%
+  filter(Species %in% species_order) %>%
+  mutate(Species = fct_relevel(Species, species_order)) %>%
   arrange(Species) %>%
-  gather("SampleID","CLR", 2:ncol(.))
-
-# now cluster by sample
-# convert the matrix to a data.frame
-malt_otu_pca_table_clr_smp <- malt_otu_pca_table_clr %>%
-  as.data.frame()
-
-# perform a distance calculation for hierarchical clustering for the species ordering
-malt_otu_pca_table_clr_smp_dist <- vegdist(malt_otu_pca_table_clr_smp, method = "euclidian")
-# cluster the data with hclust
-malt_otu_pca_table_clr_smp_dist_hr <- hclust(malt_otu_pca_table_clr_smp_dist)
-# malt_species.decontam_top50_all_clr_dist_hr$order gives the dendrogram order from the bottom to the top, but using the row numbers not the row names
-# pull this order out and store as a vector to make the order a factor in the next step for plotting
-smp_all_order <- malt_otu_pca_table_clr_smp_dist_hr$order %>%
-  as.character.numeric_version(.) %>%
-  str_trim(.)
-
-# use the dendrogram order to pull out the species in the correct order for the heatmap
-malt_otu_pca_table_clr_smp_order <- malt_otu_pca_table_clr %>%
-  as.data.frame() %>%
-  rownames_to_column("SampleID") %>%
-  gather("Species","CLR",2:ncol(.)) %>%
-  spread(Species,CLR) %>%
-  mutate(SmpOrder = as.character(seq(1,70))) %>%  
-  select(SampleID, SmpOrder, everything()) %>%
-  mutate(SmpOrder = fct_relevel(SmpOrder, smp_all_order)) %>%
-  arrange(SmpOrder) %>%
-  pull(SampleID)
-
-# Plot the heatmap with samples ordered by the clustering from above
-# make the SampleIDs a factor so they're in the correct order for the heatmap using the vector from the step above
-
-sample_order <- malt_pca_values %>%
-  arrange(PC1) %>%
-  pull(SampleID)
-
-malt_otu_pca_table_clr_long <- malt_otu_pca_table_clr %>%
-  as.data.frame() %>%
-  rownames_to_column("SampleID") %>%
-  gather("Species","CLR",2:ncol(.)) %>%
-  spread(SampleID,CLR) %>%
-  mutate(Species = fct_relevel(Species, malt_otu_pca_table_clr_order)) %>%
-  arrange(Species) %>%
-  gather("SampleID","CLR", 2:ncol(.)) %>%
-  inner_join(., metadata %>%
-               select(SampleID, Country), by = "SampleID") %>%
-  inner_join(., Country_colors %>%
+  gather("Library_ID","CLR", 2:ncol(.)) %>%
+  inner_join(., full_metadata %>%
+               select(Library_ID, Region), by = "Library_ID") %>%
+  inner_join(., Region_colors %>%
                as_data_frame(.) %>%
                rename(Color = value) %>%
-               mutate(Country = c("Netherlands","Spain")), by = "Country") %>%
-  mutate(SampleID = fct_relevel(SampleID,  sample_order)) %>% # malt_otu_pca_table_clr_smp_order for cluster order
-  arrange(SampleID)
+               mutate(Region = c("Netherlands","Spain")), by = "Region") %>%
+  mutate(Library_ID = fct_relevel(Library_ID,  sample_order)) %>% # malt_otu_pca_table_clr_smp_order for cluster order
+  arrange(Library_ID)
 
 vector_color = malt_otu_pca_table_clr_long %>%
-  select(SampleID, Color) %>%
+  select(Library_ID, Color) %>%
   unique %>%
   pull(Color) %>%
   as.character()
 
 # make a heatmap with ggplot
-heatmap_base <- ggplot(malt_otu_pca_table_clr_long, aes(Species, SampleID, fill = CLR)) +
+heatmap_base <- ggplot(malt_otu_pca_table_clr_long, aes(Species, Library_ID, fill = CLR)) +
   geom_tile() +
   scale_fill_viridis_c(option = "A") +
   theme_minimal(base_size = 7) +
@@ -245,106 +153,239 @@ heatmap_base <- ggplot(malt_otu_pca_table_clr_long, aes(Species, SampleID, fill 
 
 heatmap_base
 
-# ggsave("~/Desktop/MID_heatmap_clustered.pdf", plot = heatmap_base, device = "pdf",
-#        scale = 1, width = 10, height = 5, units = c("in"), dpi = 300)
 
+```
 
-# now remove all species with 100% prevalence
-
-remove_sp <- malt_otu_pca_table_clr_order[83:118]
-remove_sp <- remove_sp  %>% str_c(collapse = "|")
-
-malt_otu_pca_table_clr_long_cut <- malt_otu_pca_table_clr %>%
+Look at the first and last 50 species ordered this way - are there any
+physiological characteristics that exlain grouping (like Gram+/-, oxygen
+tolerance, etc)?
+```{r}
+malt_otu.pca$loadings$X %>%
   as.data.frame() %>%
-  rownames_to_column("SampleID") %>%
+  rownames_to_column("Species") %>%
+  arrange(desc(PC1)) %>%
+  slice_head(., n = 50)
+
+malt_otu.pca$loadings$X %>%
+  as.data.frame() %>%
+  rownames_to_column("Species") %>%
+  arrange(desc(PC1)) %>%
+  slice_tail(., n = 50) %>%
+  arrange(PC1)
+
+```
+It looks like there are 2 things going on here. First, there is a gradient in
+oxygen tolerance, and second there is a difference in preservation. Many of the
+first 30 or so taxa with strongest loading in PC1+ values are early-colonizer,
+aerobic and facultative taxa. The species with strongest loading in PC1- values
+are largely not typical oral taxa, however are anaerobic, assacharolytic, and
+close relatives of other (well-known/characterized) oral taxa.Then after that
+the taxa are predominantly late-colonizer, anaerobic taxa more commonly seen in
+dental plaque.
+
+Kirsten pooled calculus off of multiple teeth for extraction of MID samples, but
+I need to ask if Lena has records of which teeth she pooled for each sample.
+Also need to ask Lena which teeth were sampled for the CMB individuals, and if
+they were pooled.
+
+It would be good to be able to assess preservation. Perhaps run sourceTracker?
+The ARS bones from James' paper were included in decontam as controls, but these
+bones are not site-specific. Does that matter?
+
+```{r}
+pc1_pws_species <- malt_otu.pca$loadings$X %>%
+         as.data.frame() %>%
+         rownames_to_column("Species") %>%
+         arrange(desc(PC1)) %>%
+         slice_head(., n = 50) %>%
+         pull(Species)
+
+all_species_decontam %>%
+  adorn_totals(where = "col") %>%
+  select(Species, Total) %>%
+  arrange(desc(Total)) %>%
+  mutate(Order = 1:n()) %>%
+  filter(Species %in% pc1_pws_species) %>%
+  as_tibble()
+
+pc1_neg_species <- malt_otu.pca$loadings$X %>%
+         as.data.frame() %>%
+         rownames_to_column("Species") %>%
+         arrange(desc(PC1)) %>%
+         slice_tail(., n = 50) %>%
+         pull(Species)
+
+all_species_decontam %>%
+  adorn_totals(where = "col") %>%
+  select(Species, Total) %>%
+  arrange(desc(Total)) %>%
+  mutate(Order = 1:n()) %>%
+  filter(Species %in% pc1_neg_species) %>%
+  as_tibble()
+
+```
+
+## Abundance-filtered data
+```{r}
+malt_otu_filt_pca_table <- all_species_decontam %>%
+  select(matches("Species|MID")) %>%
+  select(-one_of(outliers)) %>%
+  select(-one_of(poor_samples)) %>%
+  adorn_totals(where = "col", name = "Sum_species") %>%
+  mutate(Percent = Sum_species/sum(Sum_species)*100) %>%
+  filter(Percent > 0.001) %>%
+  gather("Library_ID","Counts",2:ncol(.)) %>%
+  mutate(Counts = Counts + 1) %>%
+  spread(Species, Counts) %>%
+  column_to_rownames("Library_ID")
+
+# look at the screenplot to decide how many components to keep for the PCA -> will keep all but 2
+mixOmics::tune.pca(malt_otu_filt_pca_table, logratio = 'CLR')
+# perform a PCA to see how the data cluster
+malt_otu_filt.pca <- mixOmics::pca(malt_otu_filt_pca_table, ncomp = 2, logratio = 'CLR')
+malt_filt_pca_values <- malt_otu_filt.pca$variates$X %>%
+  as.data.frame() %>%
+  rownames_to_column("Library_ID") %>%
+  inner_join(., full_metadata, by = "Library_ID")
+
+```
+There is a point, point where bars jump from tall to much shorter, this number is used to determine numbers of components for pca (2 bars high, dropdown = leave at 2, only one bar = leave at 2), these contain most contaminations. Will leave 2 as number.
+
+Plot the PCA
+```{r}
+# plot the PCA with Library_IDs
+ggplot(malt_filt_pca_values, aes(PC1, PC2, color = Region, shape = Region)) +
+  geom_text(aes(label = Library_ID), size = 3) +
+  theme_minimal()
+
+horseshoe <- ggplot(malt_filt_pca_values, aes(PC1, PC2, color = Region, shape = Region)) +
+  geom_point(size = 2) +
+  theme_minimal()
+
+horseshoe
+
+# ggsave("~/Desktop/MID_horseshoe.pdf", plot = horseshoe, device = "pdf",
+#        scale = 1, width = 7, height = 5, units = c("in"), dpi = 300)
+
+```
+
+
+
+```{r}
+
+# plot with the species ordered by loading in PC1
+# Plot the heatmap with samples ordered by the loading in PC1 from above
+# make the Library_IDs a factor so they're in the correct order for the heatmap using the vector from the step above
+
+
+sample_order <- malt_filt_pca_values %>%
+  arrange(PC1) %>%
+  pull(Library_ID)
+
+species_filt_order <- malt_otu_filt.pca$loadings$X %>%
+  as.data.frame() %>%
+  rownames_to_column("Species") %>%
+  arrange(desc(PC1)) %>%
+  filter(!between(PC1, -0.01, 0.01)) %>%
+  pull(Species)
+
+# re-define Region_colors so we don't have the additional regions as factors to deal with later
+Region_colors = c("#311068","#E95562")
+
+# CLR-transform the matrix for plotting the heatmap
+malt_otu_filt_pca_table_clr <- clr(malt_otu_filt_pca_table) # malt_otu_filt_pca_table_filt
+malt_otu_filt_pca_table_clr <- as.matrix(malt_otu_filt_pca_table_clr)
+
+malt_otu_filt_pca_table_clr_long <- malt_otu_filt_pca_table_clr %>%
+  as.data.frame() %>%
+  rownames_to_column("Library_ID") %>%
   gather("Species","CLR",2:ncol(.)) %>%
-  spread(SampleID,CLR) %>%
-  filter(!str_detect(Species, remove_sp)) %>%
-  mutate(Species = fct_relevel(Species, malt_otu_pca_table_clr_order)) %>%
+  spread(Library_ID,CLR) %>%
+  filter(Species %in% species_filt_order) %>%
+  mutate(Species = fct_relevel(Species, species_filt_order)) %>%
   arrange(Species) %>%
-  gather("SampleID","CLR", 2:ncol(.)) %>%
-  inner_join(., metadata %>%
-               select(SampleID, Country), by = "SampleID") %>%
-  inner_join(., Country_colors %>%
+  gather("Library_ID","CLR", 2:ncol(.)) %>%
+  inner_join(., full_metadata %>%
+               select(Library_ID, Region), by = "Library_ID") %>%
+  inner_join(., Region_colors %>%
                as_data_frame(.) %>%
                rename(Color = value) %>%
-               mutate(Country = c("Netherlands","Spain")), by = "Country") %>%
-  mutate(SampleID = fct_relevel(SampleID,  sample_order)) %>% # malt_otu_pca_table_clr_smp_order for cluster order
-  arrange(SampleID)
+               mutate(Region = c("Netherlands","Spain")), by = "Region") %>%
+  mutate(Library_ID = fct_relevel(Library_ID,  sample_order)) %>% # malt_otu_filt_pca_table_clr_smp_order for cluster order
+  arrange(Library_ID)
 
-ggplot(malt_otu_pca_table_clr_long_cut, aes(Species, SampleID, fill = CLR)) +
+vector_color = malt_otu_filt_pca_table_clr_long %>%
+  select(Library_ID, Color) %>%
+  unique %>%
+  pull(Color) %>%
+  as.character()
+
+# make a heatmap with ggplot
+heatmap_base <- ggplot(malt_otu_filt_pca_table_clr_long, aes(Species, Library_ID, fill = CLR)) +
   geom_tile() +
   scale_fill_viridis_c(option = "A") +
   theme_minimal(base_size = 7) +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = -0.04), # , color = vector_color
+  theme(axis.text.x = element_text(angle = 90, hjust = 0.95), # , color = vector_color
         plot.margin = margin(0, 0, 0, 0, "pt"),
         axis.title.y = element_blank(),
         legend.position = "left")
 
-# presabs_table <- malt_otu %>%
-#   adorn_totals(where = "col", name = "Total") %>%
-#   mutate(Pct = Total/total_reads*100) %>%
-#   filter(Pct >= 0.01) %>%
-#   select(-c("Total","Pct")) %>%
-#   gather("SampleID","Counts",2:ncol(.)) %>%
-#   mutate(Counts = ifelse(Counts > 0, 1, 0)) %>%
-#   spread(SampleID, Counts) %>%
-#   adorn_totals(where = "col") %>%
-#   filter(Total == 71)
-# 
-# # calculate observed species for each sample with janitor 'adorn_totals'
-# malt_genus.decontam.os <- presabs_table %>%
-#   adorn_totals(., where = "col", name = "Observed_genera") %>%
-#   select(Observed_genera) %>%
-#   rownames_to_column("Library_ID") 
+heatmap_base
 
+
+```
+
+Look at the first and last 50 species ordered this way - are there any
+physiological characteristics that exlain grouping (like Gram+/-, oxygen
+tolerance, etc)?
+```{r}
+malt_otu_filt.pca$loadings$X %>%
+  as.data.frame() %>%
+  rownames_to_column("Species") %>%
+  arrange(desc(PC1)) %>%
+  slice_head(., n = 50)
+
+malt_otu_filt.pca$loadings$X %>%
+  as.data.frame() %>%
+  rownames_to_column("Species") %>%
+  arrange(desc(PC1)) %>%
+  slice_tail(., n = 50) %>%
+  arrange(PC1)
 
 ```
 
 ```{r}
-# plot with the species ordered by most to least abundant in the 1st or last sample (CMB004.A0101 or MID061.A0101)
-sample_order <- malt_pca_values %>%
-  arrange(PC1) %>%
-  pull(SampleID)
-  
-species_order <- malt_otu %>%
-  arrange(desc(MID061.A0101)) %>% # CMB004.A0101
-  pull(Species)
+pc1_pws_species_filt <- malt_otu_filt.pca$loadings$X %>%
+         as.data.frame() %>%
+         rownames_to_column("Species") %>%
+         arrange(desc(PC1)) %>%
+         slice_head(., n = 50) %>%
+         pull(Species)
 
-malt_otu_pca_table_clr_hm <- malt_otu_pca_table_clr %>%
-  as.data.frame() %>%
-  rownames_to_column("SampleID") %>%
-  # gather("Species", "CLR", 2:ncol(.)) %>%
-  # spread(SampleID, CLR)
-  mutate(SampleID = fct_relevel(SampleID, sample_order)) %>% 
-  arrange(SampleID) %>%
-  gather("Species","CLR", 2:ncol(.)) %>%
-  # filter(!str_detect(Species, remove_sp)) %>%
-  mutate(Species = fct_relevel(Species, species_order)) %>%
-  arrange(Species)
+all_species_decontam %>%
+  adorn_totals(where = "col") %>%
+  select(Species, Total) %>%
+  arrange(desc(Total)) %>%
+  mutate(Order = 1:n()) %>%
+  filter(Species %in% pc1_pws_species_filt) %>%
+  as_tibble()
 
+pc1_neg_species_filt <- malt_otu_filt.pca$loadings$X %>%
+         as.data.frame() %>%
+         rownames_to_column("Species") %>%
+         arrange(desc(PC1)) %>%
+         slice_tail(., n = 50) %>%
+         pull(Species)
 
-heatmap_base <- ggplot(malt_otu_pca_table_clr_hm, aes(Species, SampleID, fill = CLR)) +
-  geom_tile() +
-  scale_fill_viridis_c(option = "A") +
-  theme_minimal(base_size = 7) +
-  theme(axis.text.x = element_text(angle = 90, hjust = 0.95),
-        plot.margin = margin(0, 0, 0, 0, "pt"),
-        axis.title.y = element_blank(),
-        legend.position = "left")
-heatmap_base
-
-# ggsave("~/Desktop/MID_heatmap_ranked.pdf", plot = heatmap_base, device = "pdf",
-#        scale = 1, width = 10, height = 5, units = c("in"), dpi = 300)
-
+all_species_decontam %>%
+  adorn_totals(where = "col") %>%
+  select(Species, Total) %>%
+  arrange(desc(Total)) %>%
+  mutate(Order = 1:n()) %>%
+  filter(Species %in% pc1_neg_species_filt) %>%
+  as_tibble()
 
 ```
-
-
-
-
-
-
 
 
 
